BibLaTeX uses field 'file' where BibTeX uses 'localfile'

In KBibTeX's code, basically all use scenarios of field 'localfile'
got rewritten to treat field 'file' equally when parsing/reading
data and switching between 'localfile' and 'file' when writing
BibTeX or BibLaTeX data, respectively.

BUG: 396597
FIXED-IN: 0.9